plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'jacoco'
}

jacoco {
	toolVersion = "0.8.7" // 원하는 JaCoCo 버전 명시
}

jacocoTestReport {
	dependsOn test // 테스트가 먼저 실행되도록 설정
	reports {
		xml.required.set(true)  // XML 리포트 활성화
		html.required.set(true) // HTML 리포트 활성화
	}

	// 특정 디렉토리의 테스트를 실행하지 않음
	classDirectories.setFrom(
			files(classDirectories.files.collect {
				fileTree(dir: it, exclude: [
						"OpenSourceProject/morbus/MorbusApplication.class"
				])
			})
	)
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			enabled = true
			element = 'CLASS'

			// 라인 커버리지 제한을 90%로 설정
			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
			}

			// 제외할 패키지/폴더 추가
			excludes = [
					"OpenSourceProject/morbus/MorbusApplication.class"
			]
		}
	}
}

group = 'OpenSourceProject'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	runtimeOnly 'com.h2database:h2'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
	implementation 'mysql:mysql-connector-java:8.0.33'

}

test {

	jvmArgs = ["-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage"]
	finalizedBy jacocoTestReport // 테스트 후 커버리지 리포트를 생성
	useJUnitPlatform()

	jacoco{
		excludes +=[
					"OpenSourceProject/morbus/MorbusApplication.class"]
	}
}

